espanso il  README, aggiunto G/L percentuale e colorato cifre assi Y

--- a/index.html
+++ b/index.html
@@ -262,13 +262,23 @@
     <!-- Results Section -->
     <div class="results" style="display:none;">
         <!-- Stats Grid -->
-        <div class="row row-cols-1 row-cols-md-4 row-cols-sm-2 g-2 mb-2">
+        <div class="row row-cols-1 row-cols-md-3 row-cols-xl-5 row-cols-sm-2 g-2 mb-2">
             <div class="col">
                 <div class="stat-card">
                     <div class="d-flex align-items-center">
                         <div>
                             <h5 class="mb-1">Gain/Loss Totale</h5>
                             <div class="stat-value" id="totalGainLoss">-</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="stat-card">
+                    <div class="d-flex align-items-center">
+                        <div>
+                            <h5 class="mb-1">Gain/Loss %</h5>
+                            <div class="stat-value" id="totalGainLossPercentage">-</div>
                         </div>
                     </div>
                 </div>
